2003-10-27  Carl Worth  <cworth@isi.edu>

	* src/cairo_surface.c (_cairo_surface_composite):
	 (_cairo_surface_fill_rectangles):
	 (_cairo_surface_composite_trapezoids): backend functions must not
	be NULL. Track new cairo_int_status_t return value for backend
	drawing functions.

	* src/cairo_xlib_surface.c: Remove casts when initializing
	cairo_xlib_surface_backend.  Rename cairo_xlib_surface as
	cairo_xlib_surface_t.
	(_cairo_xlib_surface_create_similar):
	(_cairo_xlib_surface_destroy):
	(_cairo_xlib_surface_pull_image):
	(_cairo_xlib_surface_push_image):
	(_cairo_xlib_surface_set_matrix):
	(_cairo_xlib_surface_set_filter):
	(_cairo_xlib_surface_set_repeat):
	(_cairo_xlib_surface_composite):
	(_cairo_xlib_surface_fill_rectangles):
	(_cairo_xlib_surface_composite_trapezoids): Track changes in
	cairo_surface_backend API.

	* src/cairoint.h: cairo_surface_backend now accepts a void * for
	the virtual surface.

2003-10-27  Carl Worth  <cworth@isi.edu>

	* src/cairo_ft_font.c (_cairo_ft_font_create): Default to normal
	slant/weight on out-of-range values.
	Add missing include of fontconfig/fcfreetype.h.

2003-10-24  Keith Packard  <keithp@keithp.com>

	* src/cairo_ft_font.c: (_cairo_ft_font_show_glyphs):
	A HORRIBLE KLUDGE to repad glyph images from freetype to
	meet libic requirements.

2003-10-24  Carl Worth  <cworth@east.isi.edu>

	* src/cairo_ft_font.c (_init_cairo_ft_lib): Fix missing void from
	function prototype.
	(_utf8_to_ucs4): Mark static.

	* src/cairo_xlib_surface.c: Remove unused function
	_cairo_xlib_surface_get_picture.

	* src/cairo_ft_font.c (_cairo_ft_font_copy)
	(_cairo_ft_font_glyph_extents, _cairo_ft_font_glyph_path):
	Internal functions can't receive a NULL font pointer.

	* src/cairo.c (cairo_text_extents, cairo_glyph_extents)
	(cairo_text_path, cairo_glyph_path): Comment-out functions without
	complete implementations to squelch compiler warnings.

	* configure.in: Bump version to 0.1.8 for font API changes.
